--- a/app/src/main/res/drawable/border_button.xml
+++ b/app/src/main/res/drawable/border_button.xml
@@ -5,7 +5,8 @@
     <corners
         android:radius="10dp"
         />
-    <solid
+    <stroke
+        android:width="1dp"
         android:color="@color/primaryColor"/>
 
 </shape>
