--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -48,7 +48,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <TextView
+        <ImageView
+            android:id="@+id/homeFriendsIV"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_baseline_people_24"
+            app:tint="@color/white"
+            android:background="?android:attr/selectableItemBackground"
+            android:layout_marginStart="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+       <!-- <TextView
             android:id="@+id/logoutTV"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -56,11 +67,7 @@
             android:textColor="@color/white"
             android:textSize="20sp"
             android:gravity="center"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            />-->
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -103,6 +110,7 @@
 
 
         <ImageView
+            android:id="@+id/addFriendButtonIV"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:background="@drawable/add_friend_button"
