--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -5,20 +5,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="4dp"
     >
-
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/userItemImage"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:src="@drawable/demo_profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/user_item_status"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:layout_marginStart="40dp"
+        android:visibility="visible"
+        android:background="@drawable/user_status"
+        app:layout_constraintBottom_toBottomOf="@+id/userItemImage"
+        app:layout_constraintStart_toStartOf="@+id/userItemImage"
+        app:layout_constraintTop_toTopOf="@+id/userItemImage"
+        app:layout_constraintVertical_bias="0.921" />
     <TextView
         android:id="@+id/userItemName"
         android:layout_width="wrap_content"
@@ -26,6 +38,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="User Name"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/userItemImage"
         app:layout_constraintTop_toTopOf="@+id/userItemImage" />
 
@@ -34,8 +47,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:text="hi what are u doing now ?"
+        android:text="Tap to chat"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/userItemName"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/userItemImage"
@@ -46,21 +59,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="11.00 AM"
         app:layout_constraintBottom_toBottomOf="@+id/userItemName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/userItemName" />
 
-    <ImageView
-        android:id="@+id/user_item_status"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="48dp"
-        android:visibility="gone"
-        android:background="@drawable/user_status"
-        app:layout_constraintStart_toStartOf="@+id/userItemImage"
-        app:layout_constraintTop_toTopOf="@+id/userItemImage" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
